# vc-pipeline

./: LICENSE  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
vc_demo/: __init__.py  data_ingestion.py  data_preprocessing.py  feature_engineering.py  plots.py
vc_demo/modeling/: model_building.py  model_evaluation.py
